# archcomp

./: .clang-tidy  CMakeLists.txt
cmake/: Doxygen.cmake
include/: cache_util.hpp  compiler_hints.hpp  coordinate_storage.hpp  dynamic_aligned_allocator.hpp  simd_util.hpp
src/: cache_util.cpp
tests/: CMakeLists.txt  cache_info_printall.cpp  coordinate_storage_test.cpp
tests/coordinate_storage/: basics.cpp  common.hpp  transform.cpp
